charts/gitlab-arm64/template/deployment.yaml
# Source: onechart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-arm64-pangarabbit
  namespace: infrastructure
  labels:
    helm.sh/chart: onechart-0.69.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gitlab-arm64-pangarabbit
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubectl.kubernetes.io/default-container: gitlab-arm64-pangarabbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: onechart
      app.kubernetes.io/instance: gitlab-arm64-pangarabbit
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: onechart
        app.kubernetes.io/instance: gitlab-arm64-pangarabbit
    spec:
      containers:
        - image: zengxs/gitlab:17.0
          imagePullPolicy: IfNotPresent
          name: gitlab-arm64-pangarabbit
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 200Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /your path
              name: gitlab
      initContainers: null
      securityContext:
        fsGroup: 999
      serviceAccountName: map[annotations:map[] automount:true create:true name:]
      volumes:
        - name: gitlab
          persistentVolumeClaim:
            claimName: gitlab-arm64-pangarabbit-gitlab
