charts/gitlab-arm64/template/service.yaml
---
# Source: onechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-arm64-pangarabbit
  namespace: infrastructure
  labels:
    helm.sh/chart: onechart-0.69.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gitlab-arm64-pangarabbit
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: http
      protocol: TCP
      name: http
    - port: 22
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gitlab-arm64-pangarabbit
