charts/gitlab-arm64/template/ingress.yaml
---
# Source: onechart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-arm64-pangarabbit
  namespace: infrastructure
  labels:
    helm.sh/chart: onechart-0.69.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: gitlab-arm64-pangarabbit
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: gitlab-arm64-pangarabbit
                port:
                  number: 80
